added Footer and created Layout

--- a/src/components/Header/VerticalNav.module.css
+++ b/src/components/Header/VerticalNav.module.css
@@ -12,3 +12,9 @@
     width: 300px;
     margin: 2rem auto;
 }
+
+.pagelist-wrapper {
+    text-align: center;
+    margin: 2rem auto;
+    padding: 0;
+}
