--- a/src/components/Header/VerticalNav.module.css
+++ b/src/components/Header/VerticalNav.module.css
@@ -1,6 +1,8 @@
 .nav {
-    position: absolute;
+    position: sticky;
+    top: 0;
     right: 0;
+    z-index: 5;
     width: 300px;
     height: 100vh;
     background: #999999bb;
@@ -9,7 +11,9 @@
 }
 
 .logo-wrapper {
+    fill: white;
     width: 300px;
+    height: auto;
     margin: 2rem auto;
 }
 
