--- a/src/components/HeaderImage.module.css
+++ b/src/components/HeaderImage.module.css
@@ -1,3 +1,13 @@
-.header-image__wrapper {
-    background-image: url('Rendering - Front View 2.jpg');
+.image__wrapper {
+    width: 100%;
+    height: 100vh;
+}
+
+.image__wrapper img {
+    position: relative;
+    top: -18%;
+    object-fit:fill;
+    width: inherit;
+    height: inherit;
+    z-index: -2;
 }
