--- a/src/components/Header/HorizontalNav.module.css
+++ b/src/components/Header/HorizontalNav.module.css
@@ -3,12 +3,17 @@
     justify-content: space-between;
     align-items: center;
     z-index: 4;
-    background: #999999bb;
+    /* background: #999999bb; */
     padding: 0.5rem;
+}
+
+.sticky {
+    position: sticky;
+    top: 0;
 }
 
 .logo-wrapper {
     width: 200px;
-    fill: white;
+    fill: #9C9C9C;
     height: auto;
 }
