--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 body {
     background-color: #FCF3EC;
     font-family: 'Addington CF', serif;
+    overflow-x: hidden;
     margin: 0;
 }
 
@@ -25,4 +26,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     margin: 0;
+}
+
+.margin {
+    width: 80vw;
+    margin: 2rem auto;
 }
