--- a/src/components/PageList/PageList.module.css
+++ b/src/components/PageList/PageList.module.css
@@ -3,6 +3,7 @@
 .page {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
+    color: white;
     list-style: none;
     margin: 1rem 0;
 }
