--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -1,34 +1,39 @@
-.loading-bars {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-.loading-bars:nth-child(1) {
-    background-color: coral;
-}
-
-.bar {
+.loading-spinner {
     display: inline-block;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 40%;
+    left: 40%
+  }
+  .loading-spinner div {
+    display: inline-block;
+    position: absolute;
+    left: 8px;
+    width: 16px;
     background-color: white;
-    width: 15px;
-    height: 50px;
-    margin: 0 0.25rem;
-}
-
-.animation {
-    animation-name: expand;
-    animation-duration: 2s;
-    animation-iteration-count: 5; 
-    animation-timing-function: linear;
-}
-
-@keyframes expand {
-    50% {
-        height: 55px;
+    animation: loading-spinner 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  }
+  .loading-spinner div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
+  }
+  .loading-spinner div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
+  }
+  .loading-spinner div:nth-child(3) {
+    left: 56px;
+    animation-delay: 0;
+  }
+  @keyframes loading-spinner {
+    0% {
+      top: 8px;
+      height: 64px;
     }
-
-    100% {
-        height: 50px;
+    50%, 100% {
+      top: 24px;
+      height: 32px;
     }
-}
+  }
+  
