--- a/src/pages/AboutPage.module.css
+++ b/src/pages/AboutPage.module.css
@@ -1,25 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Amarante&family=Fira+Sans&family=Lato:wght@300;400&family=Open+Sans:wght@300&display=swap');
 
-.profile {
+.profile-pic {
     display: block;
     border-radius: 50%;
     width: 80vw;
     margin: 2rem auto;
 }
 
-.position {
+.job-title {
     font-style: italic;
     margin-top: 0.5rem;
-}
-
-.connect-button {
-    display: block;
-    background-color: #999999;
-    font: 'Lato', sans-serif;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    margin: 2rem auto;
-    padding: 0.5rem 2rem;
-
 }
