--- a/src/components/Layout/Header/BurgerMenu.module.css
+++ b/src/components/Layout/Header/BurgerMenu.module.css
@@ -5,7 +5,7 @@
 .line1,
 .line2,
 .line3 {
-    background-color: white;
+    background-color: black;
     width: 32px;
     height: 1px;
     margin: 0.5rem 0;
