--- a/src/components/Layout/Footer.module.css
+++ b/src/components/Layout/Footer.module.css
@@ -4,21 +4,32 @@
     background: #999999bb;
     font-family: 'Lato', sans-serif;
     color: white;
-    padding: 0.5rem 0;
+    /* Possible to remove padding */
+    padding: 0.01rem 0;
 }
 
 .footer p {
     font-weight: 300;
     font-size: 0.75rem;
-    margin-bottom: 2rem;
 }
+
 .pagelist-wrapper {
-    margin-bottom: 2rem;
+    /* text-align: center; */
+    margin-bottom: 1rem;
     padding: 0;
 }
 
 .logo-wrapper {
     fill: white;
-    width: 300px;
+    width: 120px;
     height: auto;
+    margin: 1.2rem 0 1rem 0;
+}
+
+.linkedIn {
+    text-decoration: underline;
+}
+
+.linkedIn:active {
+    color: blue;
 }
