Made Services and Gallery more responsive. Also did some incomplete work on the HeaderImage and Nav

--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -8,7 +8,7 @@
 .gallery img {
     position:relative;
     margin: 1rem auto;
-    width: 80vw;
+    width: 40%;
     height: auto;
 }
 
@@ -58,5 +58,17 @@
     }
     100% {
         opacity: 1;
+    }
+}
+
+@media (min-width: 540px) {
+    .gallery {
+        flex-wrap: nowrap;
+        width: 80vw;
+        margin: 2rem auto;
+    }
+
+    .gallery img {
+        margin: 2rem 2rem;
     }
 }
