--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -4,3 +4,11 @@
     grid-template-rows: repeat(1, 1fr);
     row-gap: 1rem;
 }
+
+@media (min-width: 540px) {
+    .services {
+        grid-template-columns: repeat(2, 1fr);;
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 1rem;
+    }
+}
