--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -9,6 +9,7 @@
     .services {
         grid-template-columns: repeat(2, 1fr);;
         grid-template-rows: repeat(2, 1fr);
-        column-gap: 1rem;
+        column-gap: 2rem;
+        row-gap: 2rem;
     }
 }
