--- a/src/components/Layout/Header/Nav.module.css
+++ b/src/components/Layout/Header/Nav.module.css
@@ -5,7 +5,7 @@
   z-index: 20;
   width: 100vw;
   height: 10vh;
-  padding: calc(12vh * 0.05) 5%;
+  padding: calc(10vh * 0.05) 8%;
   transition: visibility 1.5s ease-out, background-color 1.5s ease-out, opacity 1.5s ease-out;
   background-color: #fcf3ec;
 }
@@ -24,11 +24,10 @@
 }
 
 .logo {
-  /* display: flex;
-  align-items: center; */
+  display: flex;
+  align-items: center;
   width: auto;
   min-width: 7.5rem;
-  /* max-width: 7.5rem; */
   height: 8vh;
 }
 
