--- a/src/pages/ProjectPage.module.css
+++ b/src/pages/ProjectPage.module.css
@@ -1,6 +1,6 @@
 .location {
     position: absolute;
-    top: 330px; 
+    top: calc(50vh - (1.5rem / 2)); 
     color: white;
     width: 100%;
     text-align: center;
