--- a/src/components/Layout/Header/Nav.module.css
+++ b/src/components/Layout/Header/Nav.module.css
@@ -5,6 +5,7 @@
   z-index: 20;
   width: 100vw;
   height: 10vh;
+  min-height: 3rem;
   padding: calc(10vh * 0.05) 8%;
   transition: visibility 1.5s ease-out, background-color 1.5s ease-out, opacity 1.5s ease-out;
 }
