--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,6 @@ a:hover {
   cursor: pointer;
 }
 
-/* Classes not working as intended */
 .hidden {
   visibility: hidden;
   opacity: 0;
@@ -68,4 +67,10 @@ a:hover {
   visibility: visible;
   opacity: 1;
   transition: visibility 0s linear 0s, opacity 1.5s;
+}
+
+@media (min-width: 800px) {
+  .margin {
+    width: 70vw;
+  }
 }
