fix: Gallery components transition opacity sequentially
Adds a distance props to the Gallery component so it can use that to calculate at what scroll position the component's images should become visible. Before, all gallery images would become visible after you scrolled past the BackgroundImage

--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -6,26 +6,11 @@
 }
 
 .gallery img {
-    margin: 1rem auto;
+    margin: 1rem 2rem;
     width: auto;
     min-width: 18rem;
     max-width: 40%;
     height: auto;
-}
-
-.opacity {
-    animation-duration: 3s;
-    animation-timing-function: ease-in;
-    animation-name: fadein;
-}
-
-@keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
 
 @media (min-width: 540px) {
